prevent jumping layout in weapon modals

--- a/src/components/DestinyWeapon.scss
+++ b/src/components/DestinyWeapon.scss
@@ -26,6 +26,8 @@
 
     .weapon-screenshot {
       width: 100%;
+      aspect-ratio: 16 / 9;
+      object-fit: cover;
       max-width: 1280px;
       max-height: 720px;
     }
